# everest-sdk

./: .gitmodules  README.md  build_mlir.sh  set_env.sh
examples/applications/map_matching/: CMakeLists.txt  README.md
examples/applications/map_matching/data/map_o3/: _edges.csv  _nodes.csv
examples/applications/map_matching/mma/: component_projection.cpp  components.h  fcd.cpp  fcd.h  mma_xample.cpp  roadnetwork.h  roadnetwork_osm.cpp  structs.h  utils.hpp
examples/applications/map_matching/synthesis/: bambu.sh
examples/applications/traffic_prediction/: 01_traffic_prediction_full_flow.ipynb  02_traffic_prediction_version_generation.ipynb  03_traffic_prediction_quantized_flow.ipynb  04_traffic_prediction_airflow_api.ipynb  README.md
tests/cFDK/: README.md
tests/cpp-synthesis/: bambu.sh  compute_duration.cpp
tests/dosa/: README.md
tests/llvm-synthesis/: bambu.sh  helmholtz.ll
tests/margot/: README.md
tests/margot/flow/: CMakeLists.txt  README.md  agora.json  helmholtz.cpp  helmholtz.h  inverse_helmholtz.h  krnl_helm.xclbin  margot.json  problem.json  version.json
tests/margot/flow/config/: config.cmake.in
tests/margot/flow/data/: random.data
tests/margot/flow/fpga/: CMakeLists.txt  Host.hpp  fpga.h  fpga_version.cpp  main.cpp  version.json  xcl2.cpp  xcl2.hpp
tests/margot/flow/naive/: CMakeLists.txt  naive.cpp  naive.h  version.json
tests/margot/helmholtz/: .dockerignore  Dockerfile  README.md
tests/margot/helmholtz/config/: AGORA.txt  MARGOT.txt  margot.json  margot_only.json  ops.json
tests/margot/helmholtz/include/: inverse_helmholtz.h
tests/margot/helmholtz/src/: inverse_helmholtz_gemm.c  inverse_helmholtz_naive.c  inverse_helmholtz_nested.c  operator+margot.cpp
tests/runtime-evkit/: README.md
tests/virtualization/: README.md
tools/basecamp/: README.md
tools/compilation/bambu/: README.md  download-bambu.sh
tools/compilation/cFDK/: README.md
tools/compilation/dfg-mlir/: Dockerfile  README.md
tools/compilation/dosa/: README.md
tools/compilation/messner/: README.md
tools/compilation/mnemosyne/: README.md
tools/compilation/ohua/: Dockerfile  README.md
tools/compilation/olympus/: README.md
tools/runtime/evkit/: README.md
tools/runtime/margot/: README.md  compile_margot.sh  set_env.sh
tools/runtime/margot/dependencies/: .gitignore  get_dependencies.sh  set_env.sh
tools/runtime/margot/multi-versioned_generation/: README.md  collector.py  generator.py  uva.py
tools/runtime/virt_framework/: LICENSE  README.md
tools/runtime/virt_framework/qemu/: pause_extension.patch
tools/services/adlib/: README.md
